cabal-version:      3.4
name:               simple-robots
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Rodrigo Mesquita
maintainer:         rodrigo.m.mesquita@gmail.com
-- copyright:
category:           Control
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.2.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable simple-robots
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.2.0,
        simple-robots

    hs-source-dirs:   app
    default-language: Haskell2010
